--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -55,6 +56,7 @@
     "@graphql-codegen/near-operation-file-preset": "^3.0.0",
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@parcel/watcher": "^2.3.0",
+    "@types/react-table": "^7.7.17",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5"
   }
